fix “loading more” tip was covered

--- a/mobile/source/stylesheets/card.scss
+++ b/mobile/source/stylesheets/card.scss
@@ -240,9 +240,13 @@
       @include transform(scaleY(0.7) rotateZ(-135deg));
     }
   }
-  .media-load-more {
+  .table-view-cell.media-load-more {
     font-size: 15px;
     color: #2bb2a3;
+    height: 50px;
+    text-align: center;
+    top: 10px;
+    padding-top:10px;
   }
 }
 
